<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_visibility_button">Number of views</string>
    <string name="description_favorite_button">Number of likes</string>
    <string name="description_share_button">Number of share</string>
    <string name="menu_remove">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="description_post_save">Save</string>
    <string name="not_empty_content">"Content can't be empty"</string>
    <string name="edit_message">Edit message</string>
    <string name="response_body_null">Response body is null</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="there_is_no_posts">There is no posts</string>
    <string name="failed_refresh_news">Filed to refresh news feed</string>
    <string name="faile_delete_post">Failed to delete post</string>
    <string name="body_is_null">body is null</string>
    <string name="failed_save_post">Failed to save post</string>
</resources>